# Zaper-Clone

Zapier clone/: README.md  cli.py  pyproject.toml  wf  workflow.md
Zapier clone/Db/jobs/: job_0988c75af852.json  job_3a3d306f27b2.json  job_7942612ef498.json  job_7e81a037037e.json  job_9aad69a9f646.json  job_a5290f31f650.json
Zapier clone/Db/nodes/: is_big.json  list_input.json  manual_start.json  size_bucket.json  write_big.json  write_large.json  write_medium.json  write_small.json  write_small_bkt.json  write_tiny.json
Zapier clone/Db/workflows/: wf_buckets.json  wf_demo.json
Zapier clone/Engine/: __init__.py  engine.py  executor.py  models.py  store.py
Zapier clone/Engine/nodes/: __init__.py  actions.py  base.py  conditions.py  triggers.py
Zapier clone/input/: big.txt
