[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wf-orchestrator"
version = "0.1.0"
description = "A lightweight file-driven workflow orchestrator (Zapier-style) backed by JSON files."
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
]

[project.scripts]
wf = "cli:main"

[tool.setuptools]
py-modules = ["cli"]
packages = ["Engine", "Engine.nodes"]
